--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "email": "tomas.hernandez03@gmail.com"
   },
   "license": "",
-  "dependencies": {},
+  "dependencies": {
+    "socket.io": "^2.0.3"
+  },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
@@ -45,7 +47,10 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "3.0.0-beta.6",
+    "react-router-dom": "^4.1.2",
     "recompose": "^0.24.0",
+    "socket.io-client": "^2.0.3",
+    "socket.io-react": "^1.2.0",
     "styled-components": "^2.1.2",
     "stylelint": "^8.0.0",
     "stylelint-no-unsupported-browser-features": "^1.0.0",
