--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "license": "",
   "dependencies": {
+    "moment": "^2.18.1",
+    "redis": "^2.8.0",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
