--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "moment": "^2.18.1",
     "redis": "^2.8.0",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "st": "^1.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
